# keepalive-win

./: KeepAlive.Core.ps1  KeepAlive.Tests.ps1  PSScriptAnalyzerSettings.psd1  README.md  keepalive.cmd  keepalive.json  keepalive.ps1
.agents/skills/keepalive-win/: SKILL.md
.agents/skills/keepalive-win/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-new-feature-with-tests-and-docs.md  ci-pipeline-update-or-rule-tuning.md  feature-development.md
.claude/homunculus/instincts/inherited/: keepalive-win-instincts.yaml
.claude/reviews/: pr-1-review.md
.codex/: AGENTS.md
.github/workflows/: python-tests.yml  tests.yml
plans/: keepalive-cli-anti-idle.md
python/: .gitignore  README.md  keepalive.json  pyproject.toml
python/keepalive/: __init__.py  __main__.py  apps.py  browser.py  cli.py  config.py  core.py  lifecycle.py  nudge.py  runner.py  settings.py  startup.py  tray.py  win32.py
python/tests/: test_apps.py  test_browser.py  test_cli.py  test_config.py  test_core.py  test_idle_jitter.py  test_lifecycle.py  test_nudge.py  test_os_modules.py  test_runner.py  test_settings.py  test_startup.py  test_tray.py
